@@ -1,8 +1,8 @@
 /**************************************************************************//***
  *  @file    pe43713.c
  *  @author  Ray M0DHP
- *  @date    2017-12-22  
- *  @version 0.2
+ *  @date    2018-02-16  
+ *  @version 0.3
 *******************************************************************************/
 
 #include <unistd.h>
@@ -41,7 +41,7 @@ int pe43713_set_level(float level)
 
     // Set idle conditions
 
-    usleep(10);
+    usleep(PE43713_SLEEP);
     digitalWrite(LE_43713_GPIO, LOW);
     digitalWrite(CLK_43713_GPIO, LOW);
 
@@ -51,11 +51,11 @@ int pe43713_set_level(float level)
     for (bit = 0; bit <= 7; bit++)
     {
       digitalWrite(DATA_43713_GPIO, (integer_level >> bit) & 0x01);
-      usleep(10);
+      usleep(PE43713_SLEEP);
       digitalWrite(CLK_43713_GPIO, HIGH);
-      usleep(10);
+      usleep(PE43713_SLEEP);
       digitalWrite(CLK_43713_GPIO, LOW);
-      usleep(10);
+      usleep(PE43713_SLEEP);
     }
 
     // Shift out address
@@ -64,19 +64,19 @@ int pe43713_set_level(float level)
     for (bit = 0; bit <= 7; bit++)
     {
       digitalWrite(DATA_43713_GPIO, (PE43713_ADDRESS >> bit) & 0x01);
-      usleep(10);
+      usleep(PE43713_SLEEP);
       digitalWrite(CLK_43713_GPIO, HIGH);
-      usleep(10);
+      usleep(PE43713_SLEEP);
       digitalWrite(CLK_43713_GPIO, LOW);
-      usleep(10);
+      usleep(PE43713_SLEEP);
     }
 
     // Latch data and address
 
     digitalWrite(LE_43713_GPIO, HIGH);
-    usleep(10);
+    usleep(PE43713_SLEEP);
     digitalWrite(LE_43713_GPIO, LOW);
-    usleep(10);
+    usleep(PE43713_SLEEP);
 
     return 0;
   }
